--- a/BetsDashboard/_Imports.razor
+++ b/BetsDashboard/_Imports.razor
@@ -3,5 +3,7 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
+@using Blazorise
+@using Blazorise.Charts
 @using BetsDashboard
 @using BetsDashboard.Shared
