:lipstick: Add datepicker support

--- a/BetsDashboard/Pages/Counter.razor
+++ b/BetsDashboard/Pages/Counter.razor
@@ -2,6 +2,8 @@
 
 <h1>Counter</h1>
 
+<DateRangePicker />
+
 <Button Clicked="@(async () => await HandleRedraw())">Redraw</Button>
 
 <LineChart @ref="lineChart" TItem="double" />
