--- a/BetsDashboard/_Imports.razor
+++ b/BetsDashboard/_Imports.razor
@@ -5,5 +5,6 @@
 @using Microsoft.JSInterop
 @using Blazorise
 @using Blazorise.Charts
+@using BlazorDateRangePicker
 @using BetsDashboard
 @using BetsDashboard.Shared
