--- a/Web/Dashboard/Pages/Stats/Stats.razor.css
+++ b/Web/Dashboard/Pages/Stats/Stats.razor.css
@@ -1,3 +1,35 @@
-﻿h1 {
-    color: Red;
+﻿.container {
+    position: relative;
+}
+#overlay {
+    text-align: center;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+}
+#loader {
+    top: 20%;
+    display: inline-block;
+    position: absolute;
+    background-color: transparent;
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 1s linear infinite;
+}
+.data-loading {
+    filter: blur(2px);
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
