--- a/Web/Dashboard/_Imports.razor
+++ b/Web/Dashboard/_Imports.razor
@@ -1,10 +1,12 @@
 ﻿@using System.Net.Http
+@using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using Dashboard.Shared
 @using Blazorise
 @using Blazorise.Charts
 @using BlazorDateRangePicker
-@using Dashboard
-@using Dashboard.Shared
