--- a/BetDash/BetDash/Views/DashboardPage/DashboardPage.xaml
+++ b/BetDash/BetDash/Views/DashboardPage/DashboardPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:chart="clr-namespace:Syncfusion.SfChart.XForms;assembly=Syncfusion.SfChart.XForms"
-             x:Class="BetDash.Views.MainPage.MainPage"
+             xmlns:dashboardPage="clr-namespace:BetDash.Views.DashboardPage;assembly=BetDash"
+             x:Class="BetDash.Views.DashboardPage.DashboardPage"
+             x:DataType="dashboardPage:DashboardPageViewModel"
              Title="{Binding Title}">
     <StackLayout>
         <chart:SfChart HeightRequest="400">
